# BrickGPT

./: pyproject.toml  substation_components.json
.claude/skills/bfl-api/: SKILL.md
.claude/skills/bfl-api/references/code-examples/: python-client.py
.claude/skills/flux-best-practices/: SKILL.md
.claude/skills/perplexity/: SKILL.md
src/brickgpt/data/: brick_structure.py
src/brickgpt/models/: brickgpt.py
src/brickgpt/pipeline/: __init__.py  cli.py  component_generator.py  composer.py  decomposer.py  image_generator.py  instructions.py  models.py
tests/: test_infer.py
